[gd_scene load_steps=14 format=2]

[ext_resource path="res://HUD/Theme.tres" type="Theme" id=1]
[ext_resource path="res://Textures/Title/ButtonPressed.png" type="Texture" id=2]
[ext_resource path="res://Textures/Title/TitleBG.png" type="Texture" id=3]
[ext_resource path="res://Textures/Title/ButtonHover.png" type="Texture" id=4]
[ext_resource path="res://Textures/Title/Button.png" type="Texture" id=5]
[ext_resource path="res://Textures/Title/SavePanel.png" type="Texture" id=6]
[ext_resource path="res://HUD/Button.tres" type="Theme" id=7]
[ext_resource path="res://HUD/PauseScreen.gd" type="Script" id=8]
[ext_resource path="res://SaveScreen.tscn" type="PackedScene" id=9]
[ext_resource path="res://OptionsScreen.tscn" type="PackedScene" id=10]
[ext_resource path="res://HUD/ThemeBig.tres" type="Theme" id=11]
[ext_resource path="res://Assets/MenuSounds/Beep.ogg" type="AudioStream" id=12]
[ext_resource path="res://Assets/MenuSounds/Hover.ogg" type="AudioStream" id=13]

[node name="PauseScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="HintPanel" type="TextureRect" parent="."]
modulate = Color( 0.266667, 0.266667, 0.266667, 1 )
margin_left = 871.0
margin_top = 345.0
margin_right = 1698.0
margin_bottom = 738.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConansHint" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 882.0
margin_top = 357.0
margin_right = -235.0
margin_bottom = -355.0
theme = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "Copyright 2022 Haunted Bees Productions"
text = "Copyright 2022 Haunted Bees Productions"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 42.0
margin_top = 36.0
margin_right = 481.0
margin_bottom = 804.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Continue" type="TextureButton" parent="VBoxContainer"]
margin_right = 439.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/Button_Continue"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -29.0
margin_right = 125.0
margin_bottom = 29.0
rect_min_size = Vector2( 250, 0 )
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 125, 29 )
theme = ExtResource( 1 )
text = "Continue"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Options" type="TextureButton" parent="VBoxContainer"]
margin_top = 160.0
margin_right = 439.0
margin_bottom = 288.0
rect_min_size = Vector2( 0, 128 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/Button_Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -29.0
margin_right = 125.0
margin_bottom = 29.0
rect_min_size = Vector2( 250, 0 )
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 125, 29 )
theme = ExtResource( 1 )
text = "Options"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_SaveGame" type="TextureButton" parent="VBoxContainer"]
margin_top = 320.0
margin_right = 439.0
margin_bottom = 448.0
rect_min_size = Vector2( 0, 128 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/Button_SaveGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -29.0
margin_right = 125.0
margin_bottom = 29.0
rect_min_size = Vector2( 250, 0 )
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 125, 29 )
theme = ExtResource( 1 )
text = "SAVE GAME"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_LoadGame" type="TextureButton" parent="VBoxContainer"]
margin_top = 480.0
margin_right = 439.0
margin_bottom = 608.0
rect_min_size = Vector2( 0, 128 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/Button_LoadGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -29.0
margin_right = 125.0
margin_bottom = 29.0
rect_min_size = Vector2( 250, 0 )
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 125, 29 )
theme = ExtResource( 1 )
text = "Load Game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Quit" type="TextureButton" parent="VBoxContainer"]
margin_top = 640.0
margin_right = 439.0
margin_bottom = 768.0
rect_min_size = Vector2( 0, 128 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/Button_Quit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -29.0
margin_right = 125.0
margin_bottom = 29.0
rect_min_size = Vector2( 250, 0 )
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 125, 29 )
theme = ExtResource( 1 )
text = "Quit"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextHint" type="Button" parent="."]
margin_left = 1466.0
margin_top = 739.0
margin_right = 1700.0
margin_bottom = 797.0
theme = ExtResource( 7 )
text = "NEXT HINT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrevHint" type="Button" parent="."]
margin_left = 1176.0
margin_top = 739.0
margin_right = 1455.0
margin_bottom = 797.0
theme = ExtResource( 7 )
text = "PREVIOUS HINT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveScreen" parent="." instance=ExtResource( 9 )]
visible = false

[node name="OptionsScreen" parent="." instance=ExtResource( 10 )]
visible = false

[node name="GameOverLabel" type="Label" parent="."]
margin_left = 979.0
margin_top = 57.0
margin_right = 1252.0
margin_bottom = 143.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 11 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BeepSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[connection signal="mouse_entered" from="VBoxContainer/Button_Continue" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Button_Continue" to="." method="close"]
[connection signal="mouse_entered" from="VBoxContainer/Button_Options" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Button_Options" to="." method="_on_Options_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Button_SaveGame" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Button_SaveGame" to="." method="_on_SaveGame_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Button_LoadGame" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Button_LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Button_Quit" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Button_Quit" to="." method="_on_Button_Quit_pressed"]
[connection signal="mouse_entered" from="NextHint" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="NextHint" to="." method="_on_NextHint_pressed"]
[connection signal="mouse_entered" from="PrevHint" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="PrevHint" to="." method="_on_PrevHint_pressed"]
[connection signal="back_save" from="SaveScreen" to="." method="close"]
